--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,9 +1,9 @@
-// // настраиваемые колонки
-// @import './grid.less';
-
-@import "variable.less";
-@import "scaffolding.less";
-
-@import "blocks/header.less";
-
-@import "blocks/footer.less";
+.visually-hidden {
+    position: absolute;
+    width: 0;
+    height: 0;
+    padding: 0;
+    margin: 0;
+    border: none;
+    overflow: hidden;
+  }
