--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,4 +1,12 @@
-.visually-hidden {
+.bolt {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+
+  &-hidden {
     position: absolute;
     width: 0;
     height: 0;
@@ -6,4 +14,46 @@
     margin: 0;
     border: none;
     overflow: hidden;
+    opacity: 0;
   }
+}
+
+.bolt-container {
+  position: relative;
+  background-color: #fff;
+  margin: 50px 15px;
+  padding: 2em 1em 1em;
+  border-radius: 3px;
+}
+
+.bolt-close {
+  appearance: none;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  right: -15px; 
+  top: -15px;
+
+  &::before,
+  &::after {
+    content: '';
+    display: block;
+    width: 20px;
+    height: 2px;
+    background-color: #000;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+  }
+
+  &::before {
+    transform: translate(-50%, -50%) rotate(45deg);
+  }
+
+  &::after {
+    transform: translate(-50%, -50%) rotate(-45deg);
+  }
+}
