--- a/src/less/style.less
+++ b/src/less/style.less
@@ -5,6 +5,8 @@
   bottom: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.3);
+  opacity: 1;
+  transition: opacity 300ms;
 
   &-hidden {
     position: absolute;
