--- a/src/less/style.less
+++ b/src/less/style.less
@@ -6,7 +6,9 @@
   left: 0;
   background-color: rgba(0, 0, 0, 0.3);
   opacity: 1;
-  transition: opacity 300ms;
+  transition: opacity 300ms, width 300ms, 300ms height, top 300ms, left 300ms ;
+  width: 100%;
+  height: 100%;
 
   &-hidden {
     position: absolute;
@@ -36,7 +38,7 @@
   width: 50px;
   height: 50px;
   position: absolute;
-  right: -15px; 
+  right: -15px;
   top: -15px;
 
   &::before,
