--- a/src/less/style.less
+++ b/src/less/style.less
@@ -10,6 +10,10 @@
   width: 100%;
   height: 100%;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   &-hidden {
     position: absolute;
     width: 0;
