--- a/src/less/style.less
+++ b/src/less/style.less
@@ -3,7 +3,7 @@ body {
   box-sizing: border-box;
 }
 .bolt {
-  
+  cursor: pointer;
   position: fixed;
   top: 0;
   right: 0;
@@ -37,6 +37,7 @@ body {
   margin: 50px 15px;
   padding: 2em 1em 1em;
   border-radius: 3px;
+  cursor: auto;
 }
 
 .bolt-close {
