--- a/src/less/style.less
+++ b/src/less/style.less
@@ -3,7 +3,6 @@ body {
   box-sizing: border-box;
 }
 .bolt {
-  cursor: pointer;
   position: fixed;
   top: 0;
   right: 0;
@@ -11,7 +10,7 @@ body {
   left: 0;
   background-color: rgba(0, 0, 0, 0.3);
   opacity: 1;
-  transition: opacity 300ms, width 300ms, 300ms height, top 300ms, left 300ms ;
+  transition: opacity 300ms;
   width: 100%;
   height: 100%;
 
@@ -37,7 +36,6 @@ body {
   margin: 50px 15px;
   padding: 2em 1em 1em;
   border-radius: 3px;
-  cursor: auto;
 }
 
 .bolt-close {
