переименовал классы, мелкие правки

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -2,7 +2,7 @@ body {
   width: 100%;
   box-sizing: border-box;
 }
-.bolt {
+.bolt-popup {
   position: fixed;
   top: 0;
   right: 0;
@@ -18,7 +18,7 @@ body {
   justify-content: center;
   align-items: center;
 
-  &-hidden {
+  &--hidden {
     position: absolute;
     width: 0;
     height: 0;
@@ -30,7 +30,7 @@ body {
   }
 }
 
-.bolt-container {
+.bolt-popup-container {
   position: relative;
   background-color: #fff;
   margin: 50px 15px;
@@ -38,7 +38,7 @@ body {
   border-radius: 3px;
 }
 
-.bolt-close {
+.bolt-popup-close {
   appearance: none;
   border: none;
   background-color: transparent;
