--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,71 +1,18 @@
-body {
-  width: 100%;
-  box-sizing: border-box;
-}
+body {}
+
 .bolt-popup {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.3);
-  opacity: 1;
-  transition: opacity 300ms;
-  width: 100%;
-  height: 100%;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  &--hidden {
-    position: absolute;
-    width: 0;
-    height: 0;
-    padding: 0;
-    margin: 0;
-    border: none;
-    overflow: hidden;
-    opacity: 0;
-  }
+  &--hidden {}
 }
 
-.bolt-popup-container {
-  position: relative;
-  background-color: #fff;
-  margin: 50px 15px;
-  padding: 2em 1em 1em;
-  border-radius: 3px;
-}
+.bolt-popup__container {}
 
-.bolt-popup-close {
-  appearance: none;
-  border: none;
-  background-color: transparent;
-  padding: 0;
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  right: -15px;
-  top: -15px;
+.bolt-popup__close {
 
   &::before,
-  &::after {
-    content: '';
-    display: block;
-    width: 20px;
-    height: 2px;
-    background-color: #000;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-  }
+  &::after {}
 
-  &::before {
-    transform: translate(-50%, -50%) rotate(45deg);
-  }
+  &::before {}
 
-  &::after {
-    transform: translate(-50%, -50%) rotate(-45deg);
-  }
+  &::after {}
 }
