--- a/src/less/style.less
+++ b/src/less/style.less
@@ -2,31 +2,34 @@ body {
   width: 100%;
   box-sizing: border-box;
 }
+
 .bolt-popup {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
   background-color: rgba(0, 0, 0, 0.3);
-  opacity: 1;
   transition: opacity 300ms;
-  width: 100%;
-  height: 100%;
 
   display: flex;
   justify-content: center;
   align-items: center;
 
-  &--hidden {
-    position: absolute;
-    width: 0;
-    height: 0;
-    padding: 0;
-    margin: 0;
-    border: none;
-    overflow: hidden;
-    opacity: 0;
+  position: absolute;
+  width: 0;
+  height: 0;
+  padding: 0;
+  margin: 0;
+  border: none;
+  overflow: hidden;
+  opacity: 0;
+
+  &--visible {
+    
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  opacity: 1;
+  width: 100%;
+  height: 100%;
   }
 }
 
