--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,14 +1,23 @@
 body {}
 
 .bolt-popup {
-  background-color: rgba(0, 0, 0, 0.2);
+
+  width: 0;
+  height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: opacity 150ms;
 
   &--visible {
+    background-color: rgba(0, 0, 0, 0.2);
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+    opacity: 1;
+    width: 100%;
+    height: 100%;
 
     display: flex;
     justify-content: center;
@@ -16,17 +25,10 @@ body {}
   }
 }
 
-.bolt-popup__container {
-  position: relative;
-  background-color: #fff;
-
-  border-radius: 2px;
-  padding: 2em 1em 1em;
-  margin: 30px 15px;
-}
+.bolt-popup__container {}
 
 .bolt-popup__close {
-  
+
 
   &::before,
   &::after {}
