for video html+less 05.12.20-14:35

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -22,10 +22,19 @@ body {}
     display: flex;
     justify-content: center;
     align-items: center;
+
+    overflow: auto;
   }
 }
 
-.bolt-popup__container {}
+.bolt-popup__container {
+  position: relative;
+
+  background-color: #fff;
+  border-radius: 2px;
+  padding: 2em 1em 1em;
+  margin: auto 15px;
+}
 
 .bolt-popup__close {
 
