--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,4 +1,7 @@
-body {}
+// body {
+//   min-width: 100vw;
+//   box-sizing: border-box;
+// }
 
 .bolt-popup {
 
@@ -37,12 +40,34 @@ body {}
 }
 
 .bolt-popup__close {
+  position: absolute;
+  top: -15px;
+  right: -15px;
 
+  width: 48px;
+  height: 48px;
+  padding: 0;
+  box-shadow: none;
+  border: none;
+  background-color: transparent;
 
   &::before,
-  &::after {}
+  &::after {
+    position: absolute;
+    content: '';
+    display: block;
+    width: 20px;
+    height: 2px;
+    background-color: #000;
+    top: 50%;
+    left: 50%;
+  }
 
-  &::before {}
+  &::before {
+    transform: translate(-50%, -50%) rotate(45deg);
+  }
 
-  &::after {}
+  &::after {
+    transform: translate(-50%, -50%) rotate(-45deg);
+  }
 }
