--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,7 +1,7 @@
-// body {
-//   min-width: 100vw;
-//   box-sizing: border-box;
-// }
+body {
+  width: 100%;
+  box-sizing: border-box;
+}
 
 .bolt-popup {
 
