визуально оаставляем скролл

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -32,8 +32,8 @@ body {
     justify-content: center;
     align-items: center;
 
-    // на случай если контент больше чем вьюпорт
-    overflow: auto;
+    // визуально оаставляем скролл
+    overflow-y: scroll;
   }
 }
 
