--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,88 +1,40 @@
+html,
 body {
-  // box-sizing: border-box;
   scrollbar-gutter: stable;
 }
 
-.bolt-popup {
-  // скрываем окно
-  width: 0;
-  height: 0;
-  overflow: hidden;
-  opacity: 0;
-  // добавляем анимацию появления окна
-  transition: opacity 150ms;
-
-  // когда окно открыто
-  &--visible {
-    // прозрачная подложка
-    background-color: rgba(0, 0, 0, 0.2);
-    // позиционируем на весь экран
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    // делаем окно видимым
-    opacity: 1;
-
-    // контент окна распологаем по ценру
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    // визуально оаставляем скролл
-    overflow-y: scroll;
-  }
-}
-
-// контент
-.bolt-popup__container {
-  // для кнопки "закрыть"
-  position: relative;
-
-  // для читабельности
-  background-color: #fff;
-  border-radius: 2px;
-  padding: 2em 1em 1em;
-  // что бы не прилипало к краям когда маленький экран
-  margin: auto 15px;
-}
-
-// кнопка закрыть
-.bolt-popup__close {
-  // ставим в правый верхний угол жестко
-  position: absolute;
-  top: -15px;
-  right: -15px;
-
-  // минимальный размер для интеракривных элементов для мобильных устройств
-  width: 48px;
-  height: 48px;
-  padding: 0;
-  box-shadow: none;
+.dialog {
   border: none;
+  padding: 0;
   background-color: transparent;
+}
 
-  // крестик
-  &::before,
-  &::after {
-    position: absolute;
-    content: '';
-    display: block;
-    width: 20px;
-    height: 2px;
-    background-color: #000;
-    top: 50%;
-    left: 50%;
+.dialog__content {
+  padding: 1em;
+  background-color: #fff;
+}
+
+.dialog::backdrop {
+  cursor: pointer;
+}
+
+.scroll-lock {
+  overflow: hidden;
+  background-color: rgba(0, 0, 20, 0.5);
+  filter: blur(2px);
+}
+
+.dialog[open]::backdrop,
+.dialog[open] {
+  animation-name: opacity-view;
+  animation-duration: 0.25s;
+}
+
+@keyframes opacity-view {
+  0% {
+    opacity: 0;
   }
-
-  &::before {
-    transform: translate(-50%, -50%) rotate(45deg);
-  }
-
-  &::after {
-    transform: translate(-50%, -50%) rotate(-45deg);
+  100% {
+    opacity: 1;
   }
 }
